--- a/style.css
+++ b/style.css
@@ -1,51 +1,32 @@
 html {
-  font-size: 10px;
+  font-size: 16px;
   background: url(http://i.imgur.com/b9r5sEL.jpg) bottom center;
   background-size: cover;
 }
-
-body,html {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
-
-.keys {
-  display: flex;
-  flex: 1;
-  min-height: 100vh;
-  align-items: center;
-  justify-content: center;
-}
-
-.key {
-  border: .4rem solid black;
-  border-radius: .5rem;
-  margin: 1rem;
-  font-size: 1.5rem;
-  padding: 1rem .5rem;
-  transition: all .07s ease;
-  width: 10rem;
-  text-align: center;
-  color: white;
-  background: rgba(0,0,0,0.4);
-  text-shadow: 0 0 .5rem black;
-}
-
-.playing {
-  transform: scale(1.1);
-  border-color: #ffc600;
-  box-shadow: 0 0 1rem #ffc600;
+body{
+  height: 100vh;
 }
 
 kbd {
-  display: block;
-  font-size: 4rem;
+  color: #fff;
+}
+.key{
+  font-size: 6rem;
+  border: 5px black solid;
+  padding: 10px 50px;
+}
+
+.keys{
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .sound {
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  letter-spacing: .1rem;
-  color: #ffc600;
+  font-size: 1rem;
+  color: 'orange';
+  display: block;
+  text-align: center;
 }
